[tool.poetry]
name = "meme-bot"
version = "0.1.0"
description = ""
authors = ["Nimrod Oren <nimrod.oren@zesty.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
pygithub = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
